spring-cloud-kubernetes-test-support/src/main/resources/kafka/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka
    component: kafka-broker
  name: kafka-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      component: kafka-broker
  template:
    metadata:
      labels:
        app: kafka
        component: kafka-broker
    spec:
      # otherwise we will get an env var "KAFKA_PORT" (from service name: "kafka" and appended with "_PORT")
      # and this will cause this problem: https://github.com/confluentinc/cp-docker-images/blob/master/debian/kafka/include/etc/confluent/docker/configure#L58-L62
      # Another solution is to rename the service.
      enableServiceLinks: false
      volumes:
        - name: kafka-start-config-script
          configMap:
              name: kafka-start-config-script
              defaultMode: 0744
      containers:
        - name: kafka-start-config-script
          volumeMounts:
            - name: kafka-start-config-script
              mountPath: /tmp
          command:
            - /tmp/./kafka_start.sh
          image: confluentinc/cp-kafka:7.2.1
          ports:
            - containerPort: 9092
