spring-cloud-kubernetes-test-support/src/main/resources/kafka/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /kafka
            pathType: Prefix
            backend:
              service:
                name: kafka-service
                port:
                  number: 9092
